setup/eks-sample-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-sample-service
  namespace: eks-sample-app
  labels:
    app: eks-sample-app
spec:
  selector:
    app: eks-sample-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
